--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node tests/PromiseTest.js",
-    "dev": "bsb -make-world -w"
+    "watch": "bsb -make-world -w"
   },
   "keywords": [],
   "author": "",
