--- a/bsconfig.json
+++ b/bsconfig.json
@@ -9,6 +9,10 @@
     {
       "dir" : "tests",
       "type": "dev"
+    },
+    {
+      "dir" : "examples",
+      "type": "dev"
     }
   ],
   "package-specs": {
