--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/code-frame": "^7.12.11",
-    "bs-platform": "8.4.2"
+    "bs-platform": "8.4.2",
+    "node-fetch": "^2.6.1"
   }
 }
