--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ryyppy/rescript-promise",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "2020 proposal for new ReScript promise bindings",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,11 @@
     "src/Promise.resi",
     "bsconfig.json"
   ],
-  "keywords": ["rescript", "promise", "bindings"],
+  "keywords": [
+    "rescript",
+    "promise",
+    "bindings"
+  ],
   "author": "Patrick Ecker",
   "license": "MIT",
   "devDependencies": {
