--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node tests/PromiseTest.js",
-    "build": "bsb -make-world",
-    "watch": "bsb -make-world -w"
+    "build": "rescript build",
+    "watch": "rescript build -w"
   },
   "files": [
     "src/Promise.res",
@@ -23,7 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/code-frame": "^7.12.11",
-    "bs-platform": "8.4.2",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "rescript": "^10.0.1"
   }
 }
